<?xml version="1.0"?>
<package format="2">
  <name>pyrobopath_ros</name>
  <version>0.0.2</version>
  <description>ROS interfaces for using pyrobopath</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>cartesian_planning_server</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>taskspace_control_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>
